# HTTPAlchemy

./: .gitignore  README.md  pyproject.toml  requirements.txt
httpalchemy/: __init__.py  _curl.py  _engines.py  _types.py  config.py
scripts/: lint  test
src/: _curl.py  _engines.py  _exceptions.py  config.py
tests/: conftest.py  server.py  test_curl.py  test_engine.py
