[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "httpalchemy"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Karen Petrosyan", email = "kar.petrosyanpy@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "requests"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/karosis88/httpalchemy/httpalchemy#readme"
Issues = "https://github.com//karosis88/httpalchemy/httpalchemy/issues"
Source = "https://github.com//karosis88/httpalchemy/httpalchemy"

[tool.hatch.version]
path = "httpalchemy/__version__.py"
